--- a/aboutpage.html
+++ b/aboutpage.html
@@ -117,7 +117,7 @@
               <div class="skillContent1">
                 <h1 class="pb-4 skillTitle">My Skills</h1>
                 <p class="pb-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <a href="image/Professional CV-Mizan.docx" download><button class="skillBtn PageBtn mb-5">DOWNLOAD CV</button></a>
+                <a href="image/assets/Mizanur Rahman React Developer.pdf" download><button class="skillBtn PageBtn mb-5">DOWNLOAD CV</button></a>
               </div>
             </div>
 
