--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </div>
       </section>
 
-      <a href="https://web.whatsapp.com" target="_blank" class="whatsapp-icon">
+      <a href="https://wa.me/+8801612975374" target="_blank" class="whatsapp-icon">
         <i class="fab fa-whatsapp"></i>
       </a>
 
@@ -392,7 +392,7 @@
       </footer>
       
       <dir class="scrollIcon">
-        <span class="scrollTop"><i class="fa-solid fa-arrow-up"></i></span>
+        <span class="scrollTop"></span>
       </dir>
 
       <div class="jsx-616cd046d24e4566 jsx-9aebc43577dd89db scroll-top" bis_skin_checked="1">
