--- a/services.html
+++ b/services.html
@@ -316,6 +316,9 @@
       </section>
       
 
+      <a href="https://wa.me/+8801612975374" target="_blank" class="whatsapp-icon">
+        <i class="fab fa-whatsapp"></i>
+      </a>
 
       <!-- Footer  Section design here -->
       <footer>
@@ -361,8 +364,14 @@
       </footer>
 
       <dir class="scrollIcon">
-        <span class="scrollTop"><i class="fa-solid fa-arrow-up"></i></span>
+        <span class="scrollTop"></span>
       </dir>
+
+      <div class="jsx-616cd046d24e4566 jsx-9aebc43577dd89db scroll-top" bis_skin_checked="1">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-up" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="jsx-616cd046d24e4566 jsx-9aebc43577dd89db svg-inline--fa fa-angle-up fa-w-10">
+          <path fill="currentColor" d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z" class="jsx-616cd046d24e4566 jsx-9aebc43577dd89db"></path>
+        </svg>
+      </div>
 
 
 
