--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
         </div>
       </footer>
       
-      <!-- <dir class="scrollIcon">
+      <dir class="scrollIcon">
         <span class="scrollTop"></span>
-      </dir> -->
+      </dir>
 
       <div class="jsx-616cd046d24e4566 jsx-9aebc43577dd89db scroll-top" bis_skin_checked="1">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-up" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="jsx-616cd046d24e4566 jsx-9aebc43577dd89db svg-inline--fa fa-angle-up fa-w-10">
