--- a/aboutpage.html
+++ b/aboutpage.html
@@ -152,7 +152,7 @@
                 </div>
                 <div class="skills">
                     <div class="details">
-                        <span>Wordpress</span>
+                        <span>Wordpress & Elementor Pro</span>
                         <span>75%</span>
                     </div>
                     <div class="bar">
