--- a/aboutpage.html
+++ b/aboutpage.html
@@ -385,7 +385,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Optional JavaScript! -->
-    <script src="index.js"></script>
+    <script src="JS/index.js"></script>
 
   </body>
 </html>
