--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <!-- Optional JavaScript! -->
-    <script src="index.js"></script>
-    <script src="tabs-script.js"></script>
-    <script src="contact.js"></script>
+    <script src="JS/index.js"></script>
+    <script src="JS/tabs-script.js"></script>
+    <script src="JS/contact.js"></script>
     
     <script>
       // let loader = document.getElementById("preloader");
