--- a/aboutpage.html
+++ b/aboutpage.html
@@ -20,7 +20,7 @@
     <!-- Jquery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
-    <!-- Extarnal CSS -->
+    <!-- External CSS -->
     <link rel="stylesheet" href="css/about-page.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -99,7 +99,7 @@
                 <h2 class=""> <span>2+</span> Year of experience</h2>
               </div>
               <div class="experienceYear2">
-                <h2 class=""><span>15</span> Saticfied Customers</h2>
+                <h2 class=""><span>15</span> Satisfied Customers</h2>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
                 <div class="skills">
                     <div class="details">
                         <span>Wordpress & Elementor Pro</span>
-                        <span>75%</span>
+                        <span>80%</span>
                     </div>
                     <div class="bar">
                         <div id="adobe-bar"></div>
