contact form update

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
               <div class="col-lg-6 col-md-6 col-12">
                 <div class="contactForm">
-                  <form onsubmit="sendEmail()" reset(); return  >
+                  <form onsubmit="sendEmail()" reset(); return action="https://formspree.io/f/{form_id}" method="post"  >
                     <input type="text" id="fname" name="firstname" placeholder="Name*" required>
                 
                     <input type="email" id="email" name="email" placeholder="Email*" required>
